# Data-Base-Assistant

./: .gitignore  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  MainWindow.ui  README.md  README_RU.md  dbk_hmi_lvgl.db  main.cpp  untitled.ui
data/: SQLRequest.h
handler/: DataBaseHandler.cpp  DataBaseHandler.h
ui/: Item.cpp  Item.h  Item.ui  ItemTable.cpp  ItemTable.h  ItemTable.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  status_bar_button.cpp  status_bar_button.h  status_bar_button.ui  tree.cpp  tree.h  tree.ui
